fixed a json formatting issue

--- a/Diagnostics.Demo/App.config
+++ b/Diagnostics.Demo/App.config
@@ -7,6 +7,7 @@
     <add key="LogEntries.Token" value="00000000-0000-0000-0000-000000000000"/> <!--Your LogEntries.com key goes here-->
     <add key="LogEntries.ImmediateFlush" value="true"/>
     <add key="LogEntries.Debug" value="false"/>
+    <add key="LogEntries.UseJson" value="true"/>
   </appSettings>
   <system.diagnostics>
     <trace>
